css/main.css
* {
  font-family: "Jost";
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
}

/* NAVIGATION BAR */
header {
  display: flex;
  justify-content: space-between;
  background-color: #fff;
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1000;
}

.nav-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 20px;
  width: 100%;
  height: 100%;
  position: relative;
}

.nav-hidden {
  transform: translateY(-100%);
}

.left {
  flex: 1;
  display: flex;
  align-items: center;
}

.middle {
  flex: 2;
  display: block;
  justify-content: center;
  align-items: center;
}

.middle ul {
  display: flex;
  list-style: none;
  gap: 2rem;
  padding: 0;
  margin: 0 15px;
  justify-content: center;
}

.middle li {
  display: block;
  position: relative;
  width: fit-content;
}

.middle li::after {
  content: "";
  position: absolute;
  width: 0;
  height: 1.2px;
  background: black;
  left: 0;
  bottom: -3px;
  transition: width 0.3s ease;
}

.middle li:hover::after {
  width: 100%;
}

.right {
  flex: none;
  display: flex;
  justify-content: flex-end;
  gap: 1rem;
  align-items: center;
}

.en {
  margin-left: -8px;
}

.right {
  display: flex;
  align-items: center;
  gap: 15px;
  flex: 1;
  justify-content: flex-end;
  padding-right: 10px;
}

.right a {
  text-decoration: none;
  color: black;
  font-size: 20px;
  position: relative;
  width: 55px;
  display: block;
}

.right a::after {
  content: "";
  position: absolute;
  width: 0;
  height: 1.2px;
  background: black;
  left: 0;
  bottom: -3px;
  transition: width 0.3s ease;
}

.right a:hover::after {
  width: 100%;
}

.logo {
  width: auto;
  height: 60px;
  object-fit: contain;
}

/* Search Bar Styling */
.search-container {
  padding: 8px 16px;
  border: 1px solid #ccc;
  border-radius: 50px;
  width: 250px;
  transition: border-color 0.3s;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.search-container #searchInput {
  width: 100%;
  padding: 2px 10px 2px 2px; /* right padding increased for button space */
  font-size: 16px;
  border: none;
  outline: none;
}

.search-button {
  background-color: #17689c;
  border: none;
  color: white;
  border-radius: 50%;
  width: 2.3rem;
  height: 2rem;
  cursor: pointer;
  font-size: 14px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-button:hover {
  background-color: #12567e;
}

/* Links */
a {
  text-decoration: none;
  font-size: 20px;
  font-weight: 400;
  color: black;
}

/* Language drop down menu*/
.language-selector {
  position: relative;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.selected-lang {
  padding: 0.5rem;
  font-size: 20px;
}

.language-menu {
  position: absolute;
  top: 100%;
  right: 0px;
  background-color: white;
  border: 1px solid #cccccc;
  list-style-type: none;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 0px;
  padding-right: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  width: 120px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  display: none;
  z-index: 100;
}

.language-menu li {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  cursor: pointer;
}

.language-menu li:hover {
  background-color: #f0f0f0;
}

.language-menu.show {
  display: block;
}
/* Footer */
footer {
  padding: 20px;
  text-align: center;
  width: 100%;
}

.footer-links {
  display: flex;
  justify-content: center;
  gap: 50px;
  margin-bottom: 30px;
}

.footer-links div {
  text-align: left;
}

.footer-links h4 {
  margin-bottom: 5px;
}

.footer-links a {
  display: block;
  color: #000000;
  text-decoration: none;
  margin: 2px 0;
  position: relative;
  width: fit-content;
  font-size: 15px;
}

.footer-links a::after {
  content: "";
  position: absolute;
  width: 0;
  height: 1.2px;
  background: black;
  left: 0;
  bottom: -2px;
  transition: width 0.3s ease;
}

.footer-links a:hover::after {
  width: 100%;
}

.footer-links input {
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-bottom: 10px;
  width: 200px;
}

.footer-links button {
  background-color: #fff;
  color: #000;
  padding: 10px 20px;
  border: 2px solid #000;
  border-radius: 5px;
  font-weight: 450;
  cursor: pointer;
  transition: all 0.3s ease;
}

.footer-links button:hover {
  transform: translateY(-2px);
}

.footer-bottom {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1200px;
  margin: 60px auto 0;
  padding: 0 50px;
  position: relative;
}

.logo {
  flex: 0 0 auto;
  flex: 1;
}

footer .social-icons {
  flex: 1;
  display: flex;
  justify-content: center;
  gap: 12px;
}

footer .social-icons img {
  width: 30px;
  height: 30px;
}

.lan-container {
  flex: 1;
  text-align: right;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  font-size: 18px;
}

.lan {
  width: 18px;
  height: 18px;
  vertical-align: middle;
}

.lan-container a {
  text-decoration: none;
  font-size: 18px;
  color: black;
}

#subscribe {
  font-weight: 600;
}

#subscribe-text {
  font-weight: 400;
  font-size: 15px;
  color: black;
  margin-top: 0;
  margin-bottom: 15px;
}

.subscribe-btn {
  font-size: 15px;
}

.icon {
  cursor: pointer;
  transition: all 0.3s;
}

.icon:hover {
  opacity: 0.5;
  transform: translateY(-3px);
}

#hr {
  border: none;
  border-top: 1px solid #e5e5e5;
  width: 100%;
}

body {
  margin: 0;
  color: #000;
  background: #fff;
}

/* Section 1: Hero */
.hero {
  background-image: url("../images/background-image.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.hero-content {
  width: 20rem;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 2rem;
  border-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
}

.hero input[type="text"],
.hero input[type="date"] {
  padding: 0.75rem;
  font-size: 1rem;
  width: 100%;
  border: none;
  border-radius: 0.25rem;
}

.hero button {
  padding: 0.75rem;
  background-color: #ec5e5e;
  color: white;
  border: none;
  border-radius: 0.25rem;
  font-size: 1rem;
  width: 10rem;
}

/* Section 2: Shortcuts */
.shortcuts {
  padding: 3rem 1rem;
  text-align: center;
}

.category-row {
  display: flex;
  margin-top: 2rem;
}

.category {
  flex: 1;
  background-size: cover;
  background-position: center;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 1.5rem;
  font-weight: bold;
}

.category:nth-child(1) {
  background-image: url("../images/museum.jpg");
}
.category:nth-child(2) {
  background-image: url("../images/jing-temple.jpg");
}
.category:nth-child(3) {
  background-image: url("../images/food.jpg");
}
.category:nth-child(4) {
  background-image: url("../images/jing-temple.jpg");
}

/* Section 3: Promo */
.promo {
  display: flex;
  padding: 2rem;
  gap: 2rem;
  align-items: center;
}

.promo-img {
  width: 30rem;
  border-radius: 1rem;
}

.promo-text h3 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.promo-text a {
  color: #ec5e5e;
  text-decoration: none;
  font-weight: bold;
}

/* Section 4: Top Rated */
.top-rated {
  padding: 3rem 1rem;
  text-align: center;
}

.top-rated-gallery {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-top: 2rem;
}

.activity img {
  width: 100%;
  border-radius: 0.5rem;
}

.activity p {
  margin-top: 0.5rem;
}

.small {
  width: 10vw;
}
.medium {
  width: 12vw;
}
.large {
  width: 16vw;
}

/* Section 5: Last Minute */
.last-minute {
  background-image: url("../images/yu-garden.jpg");
  background-size: cover;
  background-position: center;
  color: white;
  text-align: center;
  padding: 5rem 1rem;
  position: relative;
}

.last-minute-overlay {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 2rem;
  display: inline-block;
  border-radius: 0.5rem;
}

.book-btn {
  background-color: #ec5e5e;
  color: white;
  padding: 0.75rem 2rem;
  font-size: 1rem;
  border: none;
  border-radius: 0.25rem;
  margin-top: 1rem;
}
/*RESULTS PAGE*/

.grid-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  margin: 40px auto;
  max-width: 1200px;
}

.activity-tile {
  border: 1px solid #ccc;
  padding: 15px;
  text-align: center;
  background: #fff;
  border-radius: 8px;
  transition: 0.3s;
}

.activity-tile img {
  max-width: 100%;
  height: 150px;
  object-fit: cover;
}

.book-btn {
  display: inline-block;
  margin-top: 10px;
  padding: 8px 16px;
  background-color: #ec5e5e;
  color: white;
  text-decoration: none;
  border-radius: 4px;
}

#showMoreBtn {
  display: block;
  margin: 20px auto;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #17689c;
  color: white;
  text-decoration: none;
  border-radius: 4px;
}

#showLessBtn {
  display: block;
  margin: 20px auto;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #17689c;
  color: white;
  text-decoration: none;
  border-radius: 4px;
}

@media (max-width: 768px) {
  .nav-container {
    flex-direction: column;
    padding: 15px;
  }
  .logo {
    text-align: center;
    margin-bottom: 5px;
    width: 100%;
  }
  .middle {
    width: 100%;
    justify-content: center;
    margin: 10px 0;
  }
  .middle a {
    font-size: 18px;
    margin: 0 5px;
  }
  .right {
    width: 100%;
    justify-content: center;
    margin-top: 5px;
    gap: 10px;
  }
  .promo {
    display: block;
    padding: 0;
    gap: 2rem;
    align-items: center;
  }

  .promo-img {
    width: 100%;
    border-radius: 1rem;
  }

  .promo-text h3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
    padding: 10px;
  }

  .promo-text a {
    color: #ec5e5e;
    text-decoration: none;
    font-weight: bold;
    padding: 10px;
  }
}

